# $Id$

Griffith ChangeLog
------------------
(c) 2005-2006 Vasco Nunes

2006-04-07 Vasco Nunes <vasco.m.nunes@gmail.com>
	* some win32 related fixes

2006-04-05 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Some changes to winsetup.py

2006-03-11 Piotr Ozarowski <ozarow@gmail.com>
	* Makefile fixes:
	 + Manpages are now uninstalled as well
	 + Code cleanups
	* Debian files updated

2006-03-06 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Czech translation updated.
	* CSFD - 'Cesko-Slovensk Filmov Databze' movie plugin updated.

2006-03-05 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Spanish translation updated.
	* Allocine movie plugin updated.

---- 0.6 ----

2006-03-05 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Fixed bug when using 'clone movie' function on filtered treeview.
	* When using quick filter, 'all movies' filter on menu should be checked. Fixed.
	* Posters are now saved to the system temp dir and only moved to posters dir when the movie is really commited to db.
	* Added a new feature to find and delete orphaned files in poster's directory. For now, it's a console only tool.
	  'griffith -c' or 'griffith --clean'. Griffith should not produce orphans anymore but this is useful for cleaning old ones.

2006-03-05 Piotr Ozarowski <ozarow@gmail.com>
	* Fixed bug when searching movie titles containing polish characters
	* Update volume/collection data after creating new database

2006-03-04 Vasco Nunes <vasco.m.nunes@gmail.com>
	* After deleting a movie, last row is now selected on main treeview
	* Minor fixes to Allocine and 7arte movie plugins
	* Portuguese translation updated.
	* Quick filter not always working as expected. This is fixed now.
	* When loaning/returning a movie wrong row is selected. Fixed.

2006-03-04 Piotr Ozarowski <ozarow@gmail.com>
	* Fixed displaing movie info before initialization (tags problem)
	* Fixed wrong poster path in cloned movie
	* Clone movie function copies tag/lang data now
	* Console search can now use multiple options